--- a/cloud_assistant/package.json
+++ b/cloud_assistant/package.json
@@ -11,8 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "element-ui": "^2.4.11",
+    "vant": "^1.5.0",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
